[project]
name = "crawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "httpx[http2]>=0.28.1",
    "loguru>=0.7.3",
    "mwparserfromhell>=0.6.6",
    "niquests[socks]>=3.12.3",
    "openai>=1.61.1",
    "pydantic>=2.10.6",
    "pywikibot>=9.6.2",
    "sqlmodel>=0.0.22",
]
