[project]
name = "crawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.12",
    "bs4>=0.0.2",
    "loguru>=0.7.3",
    "mwparserfromhell>=0.6.6",
    "pydantic>=2.10.6",
    "pywikibot>=9.6.2",
    "sqlmodel>=0.0.22",
]
